--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -25,6 +25,9 @@
 %\documentclass[10pt, a4paper]{isov2} 
 %\documentclass[10pt, letterpaper]{isov2} 
 \documentclass[10pt, a4paper]{isov2} 
+\usepackage{changebar}
+\newcommand{\bc}[1]{{\large JIRA #1\\}\cbstart }
+\newcommand{\ec}{\cbend}
 
 %% Cleaning up things that isov2 gets wrong
 \makeatletter
@@ -50,8 +53,8 @@
 %
 
 
-\textwidth 16.5cm
-\hoffset -0.1cm
+%\textwidth 16.5cm
+%\hoffset -0.1cm
 \textheight 24cm
 %\voffset 1cm
 
@@ -623,10 +626,6 @@ author=,date=,id=,replyto=,type=}{}%
 \providecommand{\DIFadd}[1]{\texorpdfstring{\DIFaddtex{#1}}{#1}} %DIF PREAMBLE
 \providecommand{\DIFdel}[1]{\texorpdfstring{\DIFdeltex{#1}}{}} %DIF PREAMBLE
 %DIF END PREAMBLE EXTENSION ADDED BY LATEXDIFF
-\usepackage{xcolor}
-\usepackage{pdfcomment}
-\newcommand{\bc}[1]{\begin{pdfsidelinecomment}[color=red,icolor=yellow,caption=inline,linebegin={/Butt},lineend={/Square},linewidth=2bp,linesep=1cm]{#1}}
-\newcommand{\ec}[1]{\end{pdfsidelinecomment}}
 
 \begin{document}
 
@@ -8323,7 +8322,7 @@ $\beta_{\Sig(L_1)}(M_2\forget\sigma) = M_1$.
 there is a $\Sig(L_1)$-sentence $\varphi$, such that $\cM_2\models \sigma(\alpha_{\Sig(L_1)}(\varphi))$ and
 $\cM_1\not\models \varphi$.
  \end{itemize} 
-\bc
+\ec
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
