minor changes to locations of Jira markers

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -1804,6 +1804,7 @@ Each logical theory can also be written a \termref{basic OMS}, and conversely ea
  \termdefinitionLight{\termref{entailment}\synonym  logical consequence\synonym specialization}{relation between two \termref{OMS}  (or an OMS and a
 \termref{sentence}, or two \termref{OMS networks}, or an OMS network and an OMS) 
 expressing that the second item (the conclusion) is logically implied by the first one (the premise).}
+
 \bc{82}
 \begin{note}
 Entailment expresses that each \DIFdelbegin \DIFdel{model }\DIFdelend \DIFaddbegin \DIFadd{realization }\DIFaddend \termref{satisfying} the  premise also 
@@ -2462,6 +2463,7 @@ the DOL semantics has to abstract from
 the differences of the logic language aspects of  OMS languages. 
 Institutions provide a formal framework that enables this abstraction. 
 \end{note} 
+
 \bc{82}
  \begin{note}
 The notion of institution uses \termref{category} theory for
@@ -6109,7 +6111,7 @@ set of names, with a subset called the set of discourse names, and a
 set of sequence markers.
 A $\Sigma$\DIFdelbegin \DIFdel{-model }\DIFdelend \DIFaddbegin \DIFadd{-realization }\DIFaddend consists of a set $\UR$,
 the universe of reference, with a non-empty subset $\UD\subseteq \UR$,
-the universe of discourse, and four mappings:
+the universe of discourse, and four mappings:\ec
    \begin{itemize} 
    \item $\rel$ from $\UR$ to subsets of $\UD^* = \{\langle x_1,\ldots,x_n \rangle \mid x_1,\ldots,x_n \in \UD\}$ (i.e., the set of finite sequences of
 elements of $\UD$);
@@ -6136,6 +6138,7 @@ Note that sequences are essentially a non-first-order feature that
 can be expressed in second-order logic.
 For details, see \cite{CommonLogic:oldfashioned}.
 
+\bc{82}
 A \Clogic signature morphism 
 consists of two maps between the sets of names and of sequence markers, such that the property of 
 being a discourse name is preserved and reflected.\footnote{That  is, a name is a discourse
