- changed color of change markings to violett (for both beginning and end), - the „end“ in the change mark is now in the middle of the line, - Changed label „JIRA“ to „DOL“ (because DOL is part of the JIRA ticket“

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -26,8 +26,9 @@
 %\documentclass[10pt, letterpaper]{isov2} 
 \documentclass[10pt, a4paper]{isov2} 
 \usepackage{changebar}
-\newcommand{\bc}[1]{{\large \hrulefill {\color{red}{JIRA #1}} \hrulefill\\}  }
-\newcommand{\ec}{~\\{\large\hrulefill end \hrulefill\\}}
+\newcommand{\bc}[1]{{\color{violet}\large \hrulefill {{DOL-{}#1}} \hrulefill\\}  }
+%\newcommand{\ec}{~\\{\large\hrulefill end \hrulefill\\}}
+\newcommand{\ec}[0]{~\\{{\color{violet}\large \hrulefill {end} \hrulefill\\}  }}
 
 %% Cleaning up things that isov2 gets wrong
 \makeatletter
