--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -26,9 +26,9 @@
 %\documentclass[10pt, letterpaper]{isov2} 
 \documentclass[10pt, a4paper]{isov2} 
 \usepackage{changebar}
-\newcommand{\bc}[1]{{\color{violet}\large \hrulefill {{DOL-{}#1}} \hrulefill\\}  }
-%\newcommand{\ec}{~\\{\large\hrulefill end \hrulefill\\}}
-\newcommand{\ec}[0]{~\\{{\color{violet}\large \hrulefill {end} \hrulefill\\}  }}
+%\newcommand{\bc}[1]{~\\{\color{violet}\large \hrulefill {\normalfont{JIRA DOL-{}#1}} \hrulefill\\}  }
+\newcommand{\bc}[1]{~\\{\color{violet}\large \hrulefill \href{http://issues.omg.org/browse/DOL-#1}{\normalfont{JIRA DOL-{}#1}} \hrulefill\\}  }
+\newcommand{\ec}[0]{~\\{{\color{violet}\large \hrulefill {\normalfont{end}} \hrulefill\\}  }}
 
 %% Cleaning up things that isov2 gets wrong
 \makeatletter
